<resources>
    <string name="app_name">Go-Together</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="join_event">Join Event</string>
    <string name="create_event">Create Event</string>
    <string name="manage_events">Manage Events</string>
    <string name="do_you_volunteer_as_a_driver">Do you volunteer as a driver?</string>
    <string name="question_destination">Enter event\'s destination</string>
    <string name="question_starting_position">Enter your pickup point</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="set">Set</string>
    <string name="seats_in_car">How many available seats in the car?</string>
    <string name="empty_destination">The event\'s destination cannot be empty.</string>
    <string name="empty_start">Your pick-up location cannot be empty.</string>
    <string name="title_activity_join_event">Join Event</string>
    <string name="title_activity_event">Event</string>
    <string name="permission_location_rationale">Location permission is needed to use your last know location in the Events.</string>
    <string name="ok">OK</string>
    <string name="permission_available_location">Location Permissions have been granted. Device Location can now be used.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="event_image">Event Image</string>
    <string name="title">Title</string>
    <string name="destination">Destination</string>
    <string name="participants">Participants</string>
    <string name="edit">Edit</string>
    <string name="title_activity_update_event">Update Event</string>

    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="edit_event">Edit Event</string>
    <string name="show_identifier">Show Identifier</string>
    <string name="conclude_event">Conclude Event</string>
    <string name="options">Options</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

</resources>
