<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.EventActivity"
    android:background="@color/green_normal">

    <item
        android:id="@+id/action_edit"
        app:showAsAction="ifRoom"
        android:textColor="@color/white"
        android:title="@string/edit_event"
        android:orderInCategory="1"
        android:icon="@drawable/ic_edit_white_24dp"
        android:background="@color/green_normal"/>
    <item
        android:id="@+id/action_show_identifier"
        app:showAsAction="ifRoom"
        android:textColor="@color/white"
        android:title="@string/show_identifier"
        android:orderInCategory="2"
        android:icon="@drawable/ic_person_add_white_24dp"
        android:background="@color/green_normal"/>
    <item
        android:id="@+id/action_conclude"
        android:title="@string/conclude_event"
        app:showAsAction="always"
        android:orderInCategory="3"
        android:textColor="@color/white"
        android:icon="@drawable/ic_done_all_white_24dp"
        android:background="@color/green_normal"/>
</menu>