<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:elevation="2dp"
    android:clickable="false"
    android:descendantFocusability="blocksDescendants"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:id="@+id/event_layout_rl">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/progress_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/eventImg"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/event_image"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"

        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        />

    <LinearLayout
        android:id="@+id/infoSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/eventImg"
        android:layout_toStartOf="@id/options"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"

        android:clickable="false"
        android:descendantFocusability="blocksDescendants"
        android:focusable="false"
        android:focusableInTouchMode="false">

        <TextView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/baseline_title_24"
            android:singleLine="true"
            android:text="@string/title"
            android:gravity="center_vertical"

            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <TextView
            android:id="@+id/destinationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/baseline_location_on_24"
            android:singleLine="true"
            android:text="@string/destination"
            android:gravity="center_vertical"

            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/eventImg"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/options"
        android:drawableStart="@drawable/ic_more_vert_black_24dp"
        android:src="@drawable/ic_more_vert_black_24dp"
        android:stateListAnimator="@null" />

    <View
        android:id="@+id/dividerView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/infoSection"
        android:background="@android:color/darker_gray"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"

        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dividerView"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"

        android:clickable="false"
        android:descendantFocusability="blocksDescendants"
        android:focusable="false"
        android:focusableInTouchMode="false">

        <TextView
            android:id="@+id/participantsView"
            android:layout_width="0dp"
            android:layout_weight=".70"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/participants"
            android:drawableStart="@drawable/baseline_group_24"
            android:layout_gravity="center"
            android:singleLine="true"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"

            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <!-- <TextView
            android:id="@+id/editView"
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/edit"
            android:drawableStart="@drawable/baseline_edit_24"
            android:layout_gravity="center"
            android:singleLine="true"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"/> -->
        
        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/edit"
            android:drawableStart="@drawable/baseline_edit_24"
            android:singleLine="true"
            android:textAllCaps="false"
            android:backgroundTint="@color/white"
            android:stateListAnimator="@null"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
    </LinearLayout>

    <!--<View
        android:id="@+id/topDividerView"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/participantSection"
        android:background="#ebebeb" />-->

</RelativeLayout>