<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateEvent2Activity"
        map:uiRotateGestures="true"
        map:uiZoomControls="true"
        map:uiZoomGestures="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:background="@color/green_normal"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/destination_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_destination"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:onClick="DestinationAutoComplete"
            android:focusable="true"
            android:background="@color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:drawableStart="@drawable/create_locations_drawable"
            />

        <View
            android:id="@+id/dividerView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/start_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/question_starting_position"
            android:clickable="true"
            android:onClick="StartAutoComplete"
            android:focusable="true"
            android:background="@color/white"
            android:foreground="?android:attr/selectableItemBackground" />

        <View
            android:id="@+id/dividerView2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/driver_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Do you volunteer as a driver?"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:onClick="DriverVolunteer"
            android:focusable="true"
            android:background="@color/white"
            android:foreground="?android:attr/selectableItemBackground"/>

        <LinearLayout
            android:id="@+id/driverInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/seatNumberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/seats_in_car"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/seatNumberEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:hint="4"
                android:inputType="number"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>