<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context=".UpdateEventActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/updateEventLayout">

    <!-- this is a dummy layout to agro focu from the edittext -->
    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:ignore="Orientation" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_title"
        android:background="@color/green_normal"
        android:elevation="4dp"
        android:theme="@style/GoTogether_Theme.EditText"
        >
        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Title"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="26sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textNoSuggestions"
            android:elevation="0dp"
            />
    </android.support.design.widget.TextInputLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        map:uiRotateGestures="true"
        map:uiZoomGestures="true"
        map:uiZoomControls="false"
        android:layout_below="@id/create_title"/>

    <LinearLayout
        android:id="@+id/event_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_below="@id/create_title">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/coordinates_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_background_dark">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/start_to_destination_drawables"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coordinates_inputs">

                <ImageView
                    android:id="@+id/square_drawable"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/small_square"
                    map:layout_constraintStart_toStartOf="parent"
                    map:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/line_drawable"
                    android:layout_width="1dp"
                    android:layout_height="32dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="12dp"
                    android:background="#000000"
                    map:layout_constraintStart_toStartOf="parent"
                    map:layout_constraintTop_toBottomOf="@id/square_drawable" />

                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/small_circle"
                    map:layout_constraintStart_toStartOf="parent"
                    map:layout_constraintTop_toBottomOf="@id/line_drawable" />
            </android.support.constraint.ConstraintLayout>

            <EditText
                android:id="@+id/start_autocomplete"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/question_starting_position"
                android:paddingStart="8dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_red"
                android:textSize="18sp"
                android:inputType="textCapSentences|textNoSuggestions"
                android:imeOptions="actionDone"
                map:layout_constraintTop_toTopOf="parent"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toEndOf="@+id/start_to_destination_drawables"
                 />

            <EditText
                android:id="@+id/destination_autocomplete"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/question_destination"
                android:paddingStart="8dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_red"
                android:textSize="18sp"
                android:inputType="textCapSentences|textNoSuggestions"
                android:imeOptions="actionDone"
                map:layout_constraintBottom_toBottomOf="parent"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toEndOf="@+id/start_to_destination_drawables"
                map:layout_constraintTop_toBottomOf="@id/start_autocomplete"
                 />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/driver_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/driver_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_background_dark"
                map:layout_constraintTop_toTopOf="parent"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                >

                <ImageView
                    android:id="@+id/vehicle_drawable"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_directions_car_black_18dp"
                    map:layout_constraintStart_toStartOf="parent"
                    map:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/driver_question_tv"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="Do you volunteer as a driver?"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    map:layout_constraintBottom_toBottomOf="parent"
                    map:layout_constraintStart_toEndOf="@+id/vehicle_drawable"
                    map:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/radioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:onClick="DrivingVolunteer"
                    map:layout_constraintBottom_toBottomOf="parent"
                    map:layout_constraintEnd_toEndOf="parent"
                    map:layout_constraintStart_toEndOf="@id/driver_question_tv"
                    map:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/seat_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/driver_inputs"
                android:background="@color/white_background_dark"
                android:visibility="visible"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintTop_toBottomOf="@id/driver_question"
                android:elevation="0dp"
                >

                <ImageView
                    android:id="@+id/circle_vehicle_drawable"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="19dp"
                    android:src="@drawable/small_circle"
                    android:visibility="visible"
                    map:layout_constraintStart_toStartOf="parent"
                    map:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    map:layout_constraintEnd_toEndOf="parent"
                    map:layout_constraintStart_toEndOf="@id/circle_vehicle_drawable"
                    map:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="0.70"
                        android:layout_marginBottom="8sp"
                        android:layout_marginTop="4dp"
                        android:gravity="center_vertical"
                        android:text="@string/seats_in_car"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:visibility="visible" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="0.10"
                        android:background="@color/white"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/seatNumberEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:elevation="0dp"
                            android:hint="4"
                            android:inputType="number"
                            android:paddingStart="8dp"
                            android:paddingTop="2sp"
                            android:paddingEnd="8dp"
                            android:paddingBottom="8sp"
                            android:singleLine="true"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:visibility="visible" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/suggestions_slider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/event_inputs"
        android:background="@color/white_background_dark"
        android:visibility="visible"
        android:orientation="vertical">

        <Button
            android:id="@+id/my_location"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_my_location_black_18dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="Use my current location"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="18sp"/>

        <ListView
            android:id="@+id/places_suggestions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/my_location"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:divider="@android:color/transparent"
            android:scrollbars="none"/>
    </LinearLayout>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/update_done"
        style="@style/MenuButton_Green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:onClick="concludeUpdate"
        android:src="@drawable/ic_done_white_24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        fab:fab_size="normal"
        />

</RelativeLayout>